--- a/.github/workflows/mail.yml
+++ b/.github/workflows/mail.yml
@@ -1,3 +1,13 @@
+
+name: Build de imagenes y deploy de app a EKS AWS
+
+on:
+  push:
+    branches:
+      - 'master'
+  
+jobs:
+
 build_imagen_a_container:
     name: Buildeo de imagen, test y publicación a AWS.
     runs-on: ubuntu-latest
