--- a/.github/workflows/mail.yml
+++ b/.github/workflows/mail.yml
@@ -11,7 +11,7 @@ jobs:
   build_imagen_a_container:
       name: Buildeo de imagen, test y publicación a AWS.
       runs-on: ubuntu-latest
-
+      steps:
       - name: Login a Docker Hub  
         uses: docker/login-action@v1
         with:
