--- a/server.conf
+++ b/server.conf
@@ -1,26 +1,26 @@
 
 
 server {
-    access_log /var/log/nginx/api_access.log main; # Each API may also log to a separate file
+    access_log /var/log/nginx/api_access.log main; 
 
     listen 80;
     server_name _;
 
    
     location /orders {
-        proxy_pass http://172.20.10.10/orders/;
+        proxy_pass http://172.20.1.30/orders/;
     }
 
     location /payments {
-        proxy_pass http://172.20.10.11/payments/;
+        proxy_pass http://172.20.1.40/payments/;
     }
 
     location /products {
-        proxy_pass http://172.20.10.13/products/;
+        proxy_pass http://172.20.1.20/products/;
     }
 
     location /shipping {
-        proxy_pass http://172.20.10.12/shipping/;
+        proxy_pass http://172.20.1.10/shipping/;
     }
 }
 
